Fixed bug in TSV export function. The function relied on an object that was not being populated correctly when loading the tree via upload or drag and drop. Fixed minor bugs: added a margin to toggle buttons to avoid visual clipping in case the container has overflow:hidden or overflow:auto; modified the message related to the absence of metadata for the metadata component.

--- a/css/base.css
+++ b/css/base.css
@@ -1168,6 +1168,7 @@ button i {
   width: 5.6rem;
   border-radius: 1.6rem;
   border: 0.1rem solid var(--secondary);
+  margin-left: 0.2rem; /* If the container has an overflow:auto or overflow:hidden, the border radius causes a cut */
   display: inline-block;
   cursor: pointer;
   position: relative;
